# Python-for-Data-Science

./: README.md
python_0/ex00/: Hello.py
python_0/ex01/: format_ft_time.py
python_0/ex02/: find_ft_type.py
python_0/ex03/: NULL_not_found.py
python_0/ex04/: whatis.py
python_0/ex05/: building.py
python_0/ex06/: filterstring.py  ft_filter.py
python_0/ex07/: sos.py
python_0/ex08/: Loading.py  tester.py
python_0/ex09/: LICENSE  README.md  pyproject.toml  setup.py
python_0/ex09/ft_package/: __init__.py  count_in_list.py
python_1/ex00/: give_bmi.py
python_1/ex01/: array2D.py  tester.py
python_1/ex02/: load_image.py
python_1/ex03/: load_image.py  zoom.py
python_1/ex04/: load_image.py  rotate.py
python_1/ex05/: load_image.py  pimp_image.py  tester.py
python_2/ex01/: aff_life.py  load_csv.py
python_2/ex02/: aff_pop.py  load_csv.py
python_2/ex03/: projection_life.py
python_3/ex00/: S1E9.py  tester.py
python_3/ex01/: S1E7.py  S1E9.py  tester.py
python_3/ex02/: DiamondTrap.py  S1E9.py  tester.py
python_3/ex03/: ft_calculator.py  tester.py
python_3/ex04/: ft_calculator.py  tester.py
python_4/: statistics.py
python_4/ex00/: tester.py
python_4/ex01/: in_out.py  tester.py
python_4/ex02/: callLimit.py  test.py  tester.py
python_4/ex03/: new_student.py  tester.py
