[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name="fli", email="	fli@student.42.fr" },
]
description = "A sample test package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["ft_package", "42", "example"]

[project.urls]
"Homepage" = "https://github.com/fli/ft_package"
"Bug Tracker" = "https://github.com/fli/ft_package/issues"